--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The Node.js backend for the app \"Beat Buddy\".",
   "main": "server.js",
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
@@ -12,7 +13,7 @@
     "npm": "^9.6.7"
   },
   "scripts": {
-    "start-nodemon": "nodemon server/server.js"
+    "start-nodemon": "nodemon server/server.js --ignore api/access-token.js"
   },
   "keywords": [],
   "author": "",
